// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Object {},
    ]
  }
>
  Hello
</Text>
`;

exports[`renders header font family correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "AmaticSC-Bold",
      },
      Object {},
    ]
  }
>
  hello
</Text>
`;

exports[`renders style correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  Hello
</Text>
`;
